--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "mocha": "^8.3.2"
   }
 }
